--- a/wp-content/themes/DHLGuideSA/style/style.css
+++ b/wp-content/themes/DHLGuideSA/style/style.css
@@ -128,7 +128,7 @@ body {
     -moz-transition: transform 0.3s;
     -o-transition: transform 0.3s;
     transition: transform 0.3s;
-    overflow: hidden; }
+    overflow-x: hidden; }
     @media only screen and (min-width: 768px) {
       body.mobileshowsidebar {
         -webkit-transform: translateX(0%);
@@ -273,7 +273,7 @@ body {
             width: 80%;
             max-width: 280px;
             background: none;
-            height: 8000px !important; }
+            overflow: scroll; }
             body .headerContainer .header .headerWrapper .navbar .navbar-collapse.showsidebar {
               display: block; }
             @media only screen and (min-width: 768px) {
